<resources>
    <string name="app_name">SucculentPlants</string>
    <string name="blossom">花间</string>
    <string name="handbook">图鉴</string>
    <string name="camera">相机</string>
    <string name="parterre">花圃</string>
    <string name="mine">我的</string>
    <string name="changeNickname">修改昵称</string>
    <string name="changeGender">修改性别</string>
    <string name="changeIntroduction">修改签名</string>
    <string name="personalInformation">个人信息</string>
    <string name="recognitionHistory">识别历史</string>
    <string name="myContribution">我的贡献</string>
    <string name="toRoast">我要吐槽</string>
    <string name="submitAdvice">提交建议</string>
    <string name="plantRecommend">多肉花园</string>
    <string name="interestingPlants">趣味植物</string>
    <string name="flowerArtLife">花艺生活</string>
    <string name="plantsCultivate">绿植护养</string>
    <string name="seniorColumn">资深专栏</string>
    <string name="articleWebView">文章</string>
    <string name="ApiUrl">120.79.162.134:7008</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">熊童子饲养员</string>
    <string name="hintChangeNickname">请输入昵称</string>
    <string name="hintNickname">请输入昵称</string>
    <string name="gender">男</string>
    <string name="hintGender">请选择性别</string>
    <string name="empty"></string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="introduction">落花时节又逢君</string>
    <string name="infoItem1">昵称</string>
    <string name="infoItem2">性别</string>
    <string name="infoItem3">签名</string>
    <string name="hintIntroduction">请输入签名</string>
    <string name="inReview">审核中</string>
    <string name="notPass">未通过</string>
    <string name="pass">已通过</string>
    <string name="title_activity_roast">RoastActivity</string>
    <string name="adviceHint">请输入您的意见和建议</string>
    <string name="addressHint">您是否愿意留下联系方式？</string>
    <string name="emptyAdviceHint">建议不能为空</string>
    <string name="successAdviceHint">吐槽成功</string>
    <string name="cancel">取消</string>
    <string name="plantTree">多肉树分类</string>
    <string name="succulentHandbook">多肉图鉴</string>
</resources>
