<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite">


    <LinearLayout
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/plantRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableTop="@drawable/ic_flower1_36dp"
                android:drawableTint="@color/colorDeepGray"
                android:textColor="@color/colorDeepGray"
                android:drawablePadding="5dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:text="@string/plantRecommend"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/seniorColumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableTop="@drawable/ic_leaves_36dp"
                android:drawableTint="@color/colorDeepGray"
                android:textColor="@color/colorDeepGray"
                android:drawablePadding="5dp"
                android:layout_margin="5dp"
                android:text="@string/seniorColumn"
                android:clickable="true"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/interestingPlants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableTop="@drawable/ic_plant_36dp"
                android:drawableTint="@color/colorDeepGray"
                android:textColor="@color/colorDeepGray"
                android:drawablePadding="5dp"
                android:layout_margin="5dp"
                android:text="@string/interestingPlants"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/flowerArtLife"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableTop="@drawable/ic_trees_36dp"
                android:drawableTint="@color/colorDeepGray"
                android:textColor="@color/colorDeepGray"
                android:drawablePadding="5dp"
                android:layout_margin="5dp"
                android:text="@string/flowerArtLife"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/plantsCultivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableTop="@drawable/ic_growth_36dp"
                android:drawableTint="@color/colorDeepGray"
                android:textColor="@color/colorDeepGray"
                android:drawablePadding="5dp"
                android:layout_margin="5dp"
                android:text="@string/plantsCultivate"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#efefef" />



</LinearLayout>

